Update requirements and .gitignore; remove test_api.py and enhance knowledge base handling in MusicInfoChatbot; Train 2 models to use for Classification

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,8 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+album_covers_data/
+album_dataset_info.csv
+output/
+album_covers_data.zip
+outputs.txt
